deploy/qa/booking-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-api
  namespace: qa
  labels:
    app: booking-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-api
  template:
    metadata:
      labels:
        app: booking-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - booking-api
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: booking-api
        image: fcavarzare/projeto-reserva:booking-api-0ce34dfac9cda9457e61dc70566fb8ac23d9b14c
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "50m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: booking-api-service
  namespace: qa
spec:
  selector:
    app: booking-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
